--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--- Jquery--->
 <!--- Goog Fonts -->
+
+<!--Font Awesome-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -30,7 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<div class="header-top">
 				<h2>Sudipta Das</h2>
-				<small>A Computer Science Enthusiast.</small>
+				<small>A Computer Science Enthusiast</small>
 	</div>
 	<!-- Header Ends Here ---->
 	<!--- About Me Starts Here --->
@@ -45,23 +48,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="row about-row">
 					<div class="col-md-4 about-row-column">
 						<ul class="about-details">
-							<li><p>Birthday: <span>8/7/1993</span></p></li>
-							<li><p>Phone: <span>+0000 000 00</span></p></li>
-							<li><p>Email:  <span><a href="mailto:example@gmail.com">Loremipsy@gmail.com</a></span></p></li>
+							<li><p>Birthday: <span>14/02/1998</span></p></li>
+							<li><p>Phone: <span>+91 9438164355</span></p></li>
+							<li><p>Email:  <span><a href="mailto:sudipta.das1402@gmail.com" style="color: #2980b9">sudipta.das1402@gmail.com</a></span></p></li>
 							<li><p>Website: <span><a href="http://w3layouts.com">www.Loremipsy.me</a></span></p></li>
-							<li><p>Address: <span>123 Ipsy Street, Lorem, Ipsy</span></p></li>
+							<li><p>Address: <span>D/164, Koelnagar, Rourkela, Odisha, 769014</span></p></li>
 						</ul>
 					</div>
 					<div class="col-md-8 about-row-column">
 						<h3>HOBBIES & INTERESTS</h3>
 						<ul class="hoby">
-							<li><i class="tv"></i></li>
-							<li><i class="car"></i></li>
+							
 							<li><i class="music"></i></li>
 							<li><i class="shopping"></i></li>
 							<li><i class="reading"></i></li>
 							<li><i class="travel"></i></li>
-							<li><i class="tea"></i></li>
+							
 						</ul>
 						<a href="" class="download"><span></span>Download Resume</a>
 					</div>
@@ -78,10 +80,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="direction-r">
       <div class="flag-wrapper">
         <span class="hexa"></span>
-        <span class="flag">Lorem ipsum.</span>
-        <span class="time-wrapper"><span class="time">Feb 2015</span></span>
+        <span class="flag">TCS</span>
+        <span class="time-wrapper"><span class="time">May'18-June'18</span></span>
       </div>
-      <div class="desc">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation deserunt proident.</div>
+      <div class="desc">Summer Internship in Video Engineering Research Lab</div>
     </div>
   </li>
 
@@ -90,10 +92,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="direction-l">
       <div class="flag-wrapper">
         <span class="hexa"></span>
-        <span class="flag">Lorem ipsum Anim.</span>
-        <span class="time-wrapper"><span class="time">Dec 2014</span></span>
+        <span class="flag">Technex, IIT-BHU</span>
+        <span class="time-wrapper"><span class="time">Dec'17-Jan'18</span></span>
       </div>
-      <div class="desc">Lorem ipsum In ut sit in dolor nisi ex magna eu anim anim tempor dolore aliquip enim cupidatat laborum dolore.</div>
+      <div class="desc">Winter Internship on Embedded Systems and Robotics  using Internet of Things</div>
     </div>
   </li>
 
@@ -102,10 +104,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="direction-r">
       <div class="flag-wrapper">
         <span class="hexa"></span>
-        <span class="flag">Lorem Occaecat.</span>
-        <span class="time-wrapper"><span class="time">July 2014</span></span>
+        <span class="flag">NIT, Rourkela</span>
+        <span class="time-wrapper"><span class="time">June'17-July'17</span></span>
       </div>
-      <div class="desc">Lorem ipsum Minim labore Ut cupidatat quis qui deserunt proident fugiat pariatur cillum cupidatat reprehenderit sit id dolor consectetur ut.</div>
+      <div class="desc">Research Internship on Performance Analysis of Routing  Algorithms in Optical Networks</div>
     </div>
   </li>
 </ul>
