--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!--- About Me Ends Here --->
 	<!--- Experience Starts Here --->
+	<h3 class="top-title">Experience</h3>
+	<span class="line"></span>
+ 		 
 	<ul class="timeline">
+		
   <!-- Item 1 -->
   <li>
     <div class="direction-r">
