Centered Hobby section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><p>Address: <span>D/164, Koelnagar, Rourkela, Odisha, 769014</span></p></li>
 						</ul>
 					</div>
-					<div class="col-md-8 about-row-column">
+					<div class="col-md-8 about-row-column text-center">
 						<h3>HOBBIES & INTERESTS</h3>
 						<ul class="hoby">
 							
