--- a/index.html
+++ b/index.html
@@ -126,29 +126,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<div class="col-md-3 skill-column">	
 										<div class="skill-grid">
 											<div class="circle" id="circles-1"></div>									
-											 <h3>PHOTOSHOP</h3>	
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+											 <h3>C++</h3>	
+											 <p></p>
 										 </div>								  
 									</div>
 									<div class="col-md-3 skill-column">	
 										<div class="skill-grid">
 											<div class="circle" id="circles-2"></div>									
-											 <h3>ILLUSTRATOR</h3>	
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+											 <h3>ROBOT FRAMEWORK</h3>	
+											 <p></p>
 										 </div>								  
 									</div>
 									<div class="col-md-3 skill-column">	
 										<div class="skill-grid">
 											<div class="circle" id="circles-3"></div>									
-											 <h3>HTML/CSS</h3>	
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+											 <h3>PYTHON</h3>	
+											 <p></p>
 										 </div>								  
 									</div>
 									<div class="col-md-3 skill-column">	
 										<div class="skill-grid">
 											<div class="circle" id="circles-4"></div>									
-											 <h3>JAVASCRIPT</h3>
-											 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>	
+											 <h3>INTERNET OF THINGS </h3>
+											 <p></p>	
 										 </div>								  
 									</div>
 									<div class="clearfix"> </div>
