--- a/index.html
+++ b/index.html
@@ -180,146 +180,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!--- Skill Script --->
 	</div>
 	<!--- Skills Ends Here --->
-	<!-- Social Media Connections ---->
-	<div class="social-media">
-		<div class="container">
-			<div class="social-media-top">
-				<h3 class="top-title">SOCIAL MEDIA CONNECTIONS</h3>
-				<span class="line"></span>
-				<ul class="social">
-					<li><i class="fb"></i></li>
-					<li><i class="tw"></i></li>
-					<li><i class="li"></i></li>
-					<li><i class="yt"></i></li>
-					<li><i class="ca"></i></li>
-					<li><i class="ph"></i></li>
-					<li><i class="gp"></i></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<!-- Social Media Connections ---->
-	<!--- Awards Starts Here ---->
-	<div class="awards">
-		<div class="container">
-			<div class="awards-top">
-				<h3 class="top-title">AWARDS & ACHIEVEMENTS</h3>
-				<span class="line"></span>
-				<div class="row award-row">
-					<div class="col-md-3 award-column">
-						<i class="award"></i>
-						<h5>50</h5>
-						<small>Awards Won!</small>
-					</div>
-					<div class="col-md-3 award-column">
-						<i class="project"></i>
-						<h5>570</h5>
-						<small>PROJECTS DONE</small>
-					</div>
-					<div class="col-md-3 award-column">
-						<i class="client"></i>
-						<h5>215</h5>
-						<small>HAPPY CLIENTS</small>
-					</div>
-					<div class="col-md-3 award-column">
-						<i class="cups"></i>
-						<h5>2145</h5>
-						<small>CUPS OF COFFEE</small>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--- Awards Ends Here ---->
-	<!--- Twitter Feed Starts Here ---->
-	<div class="twitter">
-		<div class="container">
-			<div class="twitter-top">
-				<i class="twit"></i>
-				<span class="line"></span>
-				<!-- Slideshow 4 -->
-			    <div  id="top" class="callbacks_container">
-			      <ul class="rslides" id="slider4">
-			        <li>
-			          <div class="slider-top">
-			          	 	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			          </div>
-			        </li>
-			        <li>
-			          <div class="slider-top">
-			          	<p>simply dummy text of the Lorem Ipsum is printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			          </div>
-			        </li>
-			        <li>
-			          <div class="slider-top">
-			          	<p>printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			          </div>
-			        </li>
-			        <li>
-			          <div class="slider-top">
-			          	<p>and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			          </div>
-			        </li>
-			        <li>
-			          <div class="slider-top">
-			          	<p>typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			          </div>
-			        </li>
-			      </ul>
-			    </div>
-			    <div class="clearfix"> </div>
-			</div>
-			<!--- Slider Script --->
-					<script src="js/responsiveslides.min.js"></script>
-					 <script>
-					    // You can also use "$(window).load(function() {"
-					    $(function () {
-					      // Slideshow 4
-					      $("#slider4").responsiveSlides({
-					        auto: true,
-					        pager: true,
-					        nav: true,
-					        speed: 500,
-					        namespace: "callbacks",
-					        before: function () {
-					          $('.events').append("<li>before event fired.</li>");
-					        },
-					        after: function () {
-					          $('.events').append("<li>after event fired.</li>");
-					        }
-					      });
-					
-					    });
-					  </script>
-			<!----//End-slider-script---->
-
-		</div>
-	</div>
-	<!--- Twitter Feed Ends Here ---->
+	
+	
 	<!--- Contact Starts Here ---->
 	<div class="contact">
 		<div class="container">
 			<div class="contact-top">
 				<h3 class="top-title">Contact Me</h3>
 				<span class="line"></span>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+				<p>Feel Free to drop in a message!</p>
 				<div class="row contact-row">
 					<div class="col-md-4 contact-column">
 						<i class="loc"></i>
-						<p>123 Ipsy Street,<br> Lorem, Ipsy</p>
+						<p>D/164, Koelnagar<br>Rourkela</p>
 					</div>
 					<div class="col-md-4 contact-column">
 						<i class="mail"></i>
-						<p><a href="mailto:example@gmail.com">loremipsy@gmail.com</a></p>
+						<p><a href="mailto:sudipta.das1402@gmail.com">sudipta.das1402@gmail.com</a></p>
 					</div>
 					<div class="col-md-4 contact-column">
 						<i class="phone"></i>
-						<p>+123 456 789<br>+987 654 321</p>
+						<p>+(91)<br>+9438164355</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
-				<div class="contact-form">
+				<form class="contact-form">
 					<div class="text">
 						<input type="text" value="Your Name.." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Name..';}"/>
 					</div>
@@ -332,11 +217,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="text">
 						<input type="submit"/>
 					</div>
-				</div>
+				</form>
 			</div>
 		</div>
 	</div>
 	<!--- Contact Ends Here ---->
+	<!-- Social Media Connections ---->
+	<div class="social-media">
+		<div class="container">
+			<div class="social-media-top">
+				<h3 class="top-title">SOCIAL MEDIA CONNECTIONS</h3>
+				<span class="line"></span>
+				<ul class="social">
+					<li><i class="fb"></i></li>
+					<!--<li><i class="tw"></i></li>-->
+					<li><i class="li"></i></li>
+					<!--<li><i class="yt"></i></li>-->
+					<li><i class="ca"></i></li>
+					<!--<li><i class="ph"></i></li>-->
+					<!--<li><i class="gp"></i></li>-->
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- Social Media Connections ---->
 	<!--- Footer Starts Here ---->
 	<div class="footer">
 		<div class="container">
